Fix success and loader component's z-index values

--- a/src/modules/loader.scss
+++ b/src/modules/loader.scss
@@ -19,6 +19,7 @@
   align-items: center;
   justify-content: center;
   background: rgba(255, 255, 255, 0.9);
+  z-index: 2;
 
   .Loader-graphic {
     display: inline-block;
